adding pill margin

--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@
     background-image: url('img/jumbo-bg.jpg');
     background-size: cover;
 }
+
+span.badge{
+    position: relative;
+    top: 15px;
+}
